# Haskell-Games

./: .ghc.environment.x86_64-linux-8.6.5  README.md
app/: Snake.hs  Start.hs  UI.hs
dist-newstyle/packagedb/ghc-8.6.5/: vty-unix-0.2.0.0-inplace.conf
hangman/: .ghc.environment.x86_64-linux-8.6.5  hangman.cabal
hangman/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hangman/src/: Hangman.hs  Lexicon.hs  Main.hs
snake/: README.md  Snake-game.cabal
snake/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
snake/dist-newstyle/packagedb/ghc-8.6.5/: brick-2.5-inplace.conf  package.cache  vty-crossplatform-0.4.0.0-inplace.conf
vty-crossplatform-0.4.0.0/: vty-crossplatform.cabal
vty-unix-0.2.0.0/: vty-unix.cabal
