name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,brick >=1.10,vty,lens >=5.3 && <5.4,
                       random,microlens,microlens-th,transformers,mtl,
                       split
  ghc-options:      -threaded -Wall -Wcompat -O2
  other-modules:       Hangman,
                       Lexicon

library
  hs-source-dirs:      src
  exposed-modules:     Words
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random
